--- a/login.html
+++ b/login.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Login</title>
-</head>
+<head><title>Login</title></head>
 <body>
 
 <h2>Login</h2>
 
-<input id="email" placeholder="Email">
-<input id="password" type="password" placeholder="Password">
+<input id="email" placeholder="Email"><br><br>
+<input id="password" type="password" placeholder="Password"><br><br>
 
 <button onclick="login()">Login</button>
 
-<!-- Firebase scripts (CORRECT for Realtime DB) -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
 <script src="app.js"></script>
 
 </body>
