--- a/dashboard.html
+++ b/dashboard.html
@@ -1,52 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Dashboard</title>
-</head>
+<head><title>Dashboard</title></head>
 <body>
 
 <h2>Dashboard</h2>
 
-<p>Email: <span id="userEmail"></span></p>
+<p>Email: <span id="email"></span></p>
 <p>Package: <span id="package">None</span></p>
 <p>Balance: $<span id="balance">0</span></p>
 
 <h3>Packages</h3>
 
-<button onclick="buyPackage(50,1)">50$ Package (Daily $1)</button>
-<button onclick="buyPackage(100,2)">100$ Package (Daily $2)</button>
-<button onclick="buyPackage(200,4)">200$ Package (Daily $4)</button>
-<button onclick="buyPackage(500,10)">500$ Package (Daily $10)</button>
+<button onclick="buyPackage(50,1)">50$ Package</button>
+<button onclick="buyPackage(100,2)">100$ Package</button>
+<button onclick="buyPackage(200,4)">200$ Package</button>
+<button onclick="buyPackage(500,10)">500$ Package</button>
 
 <br><br>
 <button onclick="claimDaily()">Claim Daily Earning</button>
 <br><br>
-
-<a href="withdraw.html">Withdraw</a>
-<br><br>
 <button onclick="logout()">Logout</button>
 
-<!-- Firebase scripts (Realtime DB) -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
 <script src="app.js"></script>
 
 <script>
 firebase.auth().onAuthStateChanged(user => {
-  if (user) {
-    document.getElementById("userEmail").innerText = user.email;
+  if (!user) location.href = "login.html";
+  document.getElementById("email").innerText = user.email;
 
-    firebase.database().ref("users/" + user.uid)
-      .on("value", snap => {
-        const d = snap.val();
-        document.getElementById("balance").innerText = d?.balance || 0;
-        document.getElementById("package").innerText = d?.package || "None";
-      });
-  } else {
-    location.href = "login.html";
-  }
+  firebase.database().ref("users/" + user.uid)
+    .on("value", snap => {
+      const d = snap.val();
+      document.getElementById("balance").innerText = d?.balance || 0;
+      document.getElementById("package").innerText = d?.package || "None";
+    });
 });
 </script>
 
