--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Online Earning Platform</title>
-<link rel="stylesheet" href="style.css">
+<title>Login</title>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script src="app.js"></script>
+<style>
+body{background:#6C63FF;font-family:Arial;display:flex;justify-content:center;align-items:center;height:100vh}
+.box{background:#fff;padding:30px;border-radius:10px;width:300px}
+input,button{width:100%;padding:10px;margin:8px 0}
+button{background:#6C63FF;color:#fff;border:none}
+</style>
 </head>
 <body>
-<h1 id="title">Online Earning Platform</h1>
-<p>Earn through tasks & referrals</p>
-<a href="signup.html">Sign Up</a>
-<a href="login.html">Login</a>
-<footer>
-<p>This platform provides digital task rewards. No guaranteed income.</p>
-</footer>
+<div class="box">
+<h2>Login</h2>
+<input id="emailEl" placeholder="Email">
+<input id="passwordEl" type="password" placeholder="Password">
+<button onclick="login()">Login</button>
+<a href="signup.html">Create account</a>
+</div>
 </body>
 </html>
